PMD sweep, change "new Boolean" into "Boolean.valueOf"
git-svn-id: svn://source.pentaho.org/svnkettleroot/Kettle/trunk@4953 5fb7f6ec-07c1-534a-b4ca-9155e429e800