@@ -83,15 +83,15 @@ public class AppendTest extends TestCase
 		
 		Object[] r1 = new Object[] { "KETTLE1", new Long(123L), 
                                      new Double(10.5D), new Date(),
-                                     new Boolean(true), new BigDecimal(123.45),
+                                     Boolean.TRUE, new BigDecimal(123.45),
                                      new BigDecimal(123.60) };
 		Object[] r2 = new Object[] { "KETTLE1", new Long(500L), 
                                      new Double(20.0D), new Date(),
-                                     new Boolean(false), new BigDecimal(123.45),
+                                     Boolean.FALSE, new BigDecimal(123.45),
                                      new BigDecimal(123.60) };
 		Object[] r3 = new Object[] { "KETTLE1", new Long(501L), 
                                      new Double(21.0D), new Date(),
-                                     new Boolean(false), new BigDecimal(123.45),
+                                     Boolean.FALSE, new BigDecimal(123.45),
                                      new BigDecimal(123.70) };
 		
 		list.add(new RowMetaAndData(rm, r1));
@@ -110,17 +110,17 @@ public class AppendTest extends TestCase
 		
 		RowMetaInterface rm = createRowMetaInterface();
 		
-		Object[] r1 = new Object[] { "KETTLE1", new Long(123L), 
+		Object[] r1 = new Object[] { "KETTLE1", Long.valueOf(123L), 
                                      new Double(10.5D), new Date(),
-                                     new Boolean(true), new BigDecimal(123.45),
+                                     Boolean.TRUE, new BigDecimal(123.45),
                                      new BigDecimal(123.60) };
-		Object[] r2 = new Object[] { "KETTLE1", new Long(500L), 
+		Object[] r2 = new Object[] { "KETTLE1", Long.valueOf(500L), 
                                      new Double(20.0D), new Date(),
-                                     new Boolean(false), new BigDecimal(123.45),
+                                     Boolean.FALSE, new BigDecimal(123.45),
                                      new BigDecimal(123.60) };
-		Object[] r3 = new Object[] { "KETTLE1", new Long(501L), 
+		Object[] r3 = new Object[] { "KETTLE1", Long.valueOf(501L), 
                                      new Double(21.0D), new Date(),
-                                     new Boolean(false), new BigDecimal(123.45),
+                                     Boolean.FALSE, new BigDecimal(123.45),
                                      new BigDecimal(123.70) };
 		
 		list.add(new RowMetaAndData(rm, r1));
